website/screen.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --fg-color: #000000;
  --fg-color--secondary: #151515;
  --bg-color: #ffffff;
  --bg-color-alt: #fafafa;
}

body {
  background: var(--bg-color);
  color: var(--fg-color);
  font: 62.5%/1.4 sans-serif;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

section {
  padding: 64px 24px;
}

section.feature {
  opacity: 1;
  transition: opacity 0.1s;
}

section.alt {
  background: var(--bg-color-alt);
  box-shadow: 0 0 25px 10px rgba(0, 0, 0, 0.02) inset;
  min-height: 100px;
}

p {
  color: var(--fg-color--secondary);
  font-size: 1rem;
  font-weight: 300;
}

.screenshot {
  display: block;
  width: 100%;
}

a {
  color: inherit;
  font: inherit;
  font-size: inherit;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

ul {
  padding: 1rem;
  padding-left: 2rem;
  font-size: 0.8rem;
  font-weight: 300;
}

.container {
  margin: 0 auto;
}

.hero {
  padding: 96px 24px;
}

.hero__info {
}

.logo {
  width: 128px;
  height: auto;
}

.title {
  font-size: 2rem;
  font-weight: 600;
}

.subtitle {
  color: var(--fg-color--secondary);
  font-size: 1.4rem;
  font-weight: 300;
}

.ctas {
}

.ctas__download-button {
  display: inline-block;
  padding: 4px 8px;
  border: 1px solid #dedede;
  border-radius: 5px;
  font-size: 1.2rem;
  font-weight: 200;
}

.ctas__download-button:hover {
  border-color: #000;
  text-decoration: none;
}

.ctas__download-button sup {
  color: #dd0000;
  font-size: 0.5rem;
  font-weight: 300;
  text-transform: uppercase;
}

.ctas__purchase-button {
  background: #fff;
  display: inline-block;
  padding: 4px 8px;
  border: 1px solid #dedede;
  border-radius: 5px;
  font-size: 1.2rem;
  font-weight: 200;
}

.ctas__purchase-button:hover {
  border-color: #000;
  text-decoration: none;
}

.ctas__purchase-button strong {
  font-weight: 400;
}

.binding {
  display: inline-block;
  padding: 3px 7px;
  background: #fff;
  border-radius: 3px;
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.05);
  font-size: 0.9rem;
}

.modifier {
  display: inline-block;
  padding: 3px 7px;
  background: #fff;
  border-radius: 3px;
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.05);
  color: #0c60ff;
  font-size: 0.9rem;
}

.col {
  padding: 12px 0;
  text-align: center;
}

.col p {
  margin: 0 auto;
  max-width: 320px;
}

.footer {
  margin: 32px 0 0 0;
}

.footer__links {
  list-style: none;
  display: grid;
  grid-auto-flow: column;
  font-size: 1rem;
  text-align: center;
}

.footer__link {
  display: block;
}

.footer__copyright {
  display: block;
  margin: 32px 0 0 0;
  text-align: center;
}

@media screen and (min-width: 960px) {
  .screenshot {
    width: 520px;
  }

  .row {
    display: grid;
    grid-template-columns: 2fr 2fr;
    align-items: center;
  }

  .row.align-top {
    align-items: flex-start;
  }

  .row.prefer-left {
    grid-template-columns: 1.5fr 1fr;
  }

  .row.prefer-right {
    grid-template-columns: 1fr 1.5fr;
  }

  .col {
    padding: 0 12px;
    text-align: left;
  }

  .col p {
    margin: 0 0;
    max-width: inherit;
    text-align: left;
  }

  p.ctas__sep {
    text-align: center;
  }

  .container {
    width: 960px;
  }
}

